# smolBSD-tui

./: Cargo.toml  README.md
src/: app.rs  events.rs  main.rs  ui.rs
src/app/: args.rs  mod.rs  state.rs
src/events/: fs.rs  handle.rs  mod.rs  term.rs  types.rs
src/ui/: mod.rs  render.rs  types.rs
src/vm/: helpers.rs  mod.rs  types.rs
