[package]
name = "smolBSD-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { version = "0.2", default-features = false }
ratatui = { version = "0.30.0-alpha.2", default-features = false, features = ["crossterm"] }

[profile.release]
strip = true	    # Automatically strip symbols from the binary
lto = "fat"         # Enable link time optimization
